# kaillera-next

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  justfile
.github/: FUNDING.yml
.github/workflows/: check-hash-citations.yml  pr-title.yml  version-bump.yml
docs/: mvp-plan.md  netplay-invariants.md  roadmap.md
docs/research/: cross-engine-determinism-investigation.md  floppyfloat-vs-softfloat-verdict.md
logs/: rdram_scan_visual.json
scripts/: bump-version.sh  check-hash-citations.sh
scripts/audit-loop/: launchd-run.sh  open-pr.sh  preflight.sh  secret-scan.sh  setup.sh
server/: .env.example  alembic.ini  pyproject.toml  pytest.ini
server/alembic/: env.py
server/alembic/versions/: 0001_initial_schema.py  0002_session_logging.py  0003_screenshots.py  0004_match_metrics.py  0005_screenshot_comparisons.py  0006_desync_events.py  0007_drop_screenshot_comparisons.py
server/config/: known_roms.json
server/src/: analytics.py  db.py  main.py  match_rotation.py  ratelimit.py  session.py  state.py
server/src/api/: app.py  desync_prompts.py  desync_vision.py  og.py  payloads.py  signaling.py
server/src/netplay/: protocol.py  tcp.py  udp.py
tests/: VGP-DEVICE-TEST.md  analyze-startup-states.mjs  conftest.py  cs-visual-test.mjs  design-mode.html  desync-e2e.spec.mjs  determinism-automation.mjs  diag-resize-resync.mjs  late-join-css-automation.mjs  late-join-p3-recorder.mjs  package.json  record-nav-auto.mjs  record-nav.mjs  rollback-rng-test.mjs  same-tab-rom-switch-automation.mjs  scan_rdram.py  scan_rdram_visual.py  screenshot-about.mjs  test_audio_capture_source.py  test_audio_recovery.py  test_db.py  test_debug_boot.py  test_desync.py  test_e2e.py  test_emulator_boot_sequence.py  test_error_pages.py  test_feedback_e2e.py  test_focus_pause_recovery.py  test_gesture_prompt.py  test_health_audit.py  test_input_clamping.py  test_input_resend.py  test_late_join_simple.py  test_lobby_ux.py  test_menu_phase_lock_source.py  test_mobile_audio.py  test_og.py  test_og_e2e.py  test_pause_reconnect.py  test_resync_default.py  (+25 more)
tests/fixtures/: nav-recording.json
tests/hash-golden/: build_native.sh  conftest.py  test_hash_registry.py
tools/: analyze_match.py  composite_grid.py  composite_screenshots.py  diff_rand_calls.py  diff_thread_samples.py  pc_to_symbol.py  rdram_diff.py  trace_extract.py  trace_generate.py
web/: admin.html  error.html  index.html  play.html
web/static/: VENDORED.md  admin.css  admin.js  api-sandbox.js  audio-worklet-processor.js  changelog.json  controller-settings.js  core-redirector.js  deterministic-timer.js  ejs-loader.js  feedback.js  gamepad-manager.js  kn-audio.js  kn-desync-detector.js  kn-diagnostics.js  kn-state.js  kn-vision-client.js  lobby.css  lobby.js  netplay-lockstep-v2.js  netplay-lockstep-v3.js  netplay-lockstep-v4.js  netplay-lockstep.js  netplay-streaming.js  netplay-streaming.old.js  netplay.js  play.css  play.js  posthog-init.js  shared.js  socket.io.min.js  storage.js  sync-worker.js  version-guard.js  version.js  (+2 more)
(+125 files in other folders)
