[project]
name = "kaillera-next-server"
version = "0.6.0"
description = "kaillera-next matchmaking and relay server"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-socketio>=5.11.0",
    "python-dotenv>=1.0.0",
    "redis[hiredis]>=5.0.0",
    "playwright>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "requests>=2.31",
    "pytest-playwright>=0.5",
    "Pillow>=10.0.0",
    "ruff>=0.8.0",
]

[project.scripts]
kaillera-server = "src.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "ASYNC", "C4", "PERF"]
ignore = ["E501", "ASYNC240"]

[tool.ruff.format]
quote-style = "double"
