[project]
name = "kaillera-next-server"
version = "0.6.0"
description = "kaillera-next matchmaking and relay server"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-socketio>=5.11.0",
    "python-dotenv>=1.0.0",
    "redis[hiredis]>=5.0.0",
    "playwright>=1.40.0",
    "Pillow>=10.0.0",
    "aiosqlite==0.20.0",
    "alembic==1.15.2",
    "sqlalchemy>=2.0.0",
    # Parquet rotation (src/match_rotation.py) — turns finished matches
    # into Parquet files + precomputed metrics so admin queries and
    # analyze_match.py don't re-parse the session_logs JSON blob.
    "polars[rtcompat]>=1.0",
    "pyarrow>=15.0",
    "anthropic>=0.34",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "requests>=2.31",
    "pytest-playwright>=0.5",
    "ruff>=0.8.0",
]
analysis = [
    # tools/analyze_match.py — DuckDB for scanning rotated Parquet files
    # and JSONL exports with pushed-down filters. Polars + pyarrow are
    # already in the core deps (used by match_rotation).
    "duckdb>=1.0",
    "requests>=2.31",
]

[project.scripts]
kaillera-server = "src.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "ASYNC", "C4", "PERF"]
ignore = ["E501", "ASYNC240"]

[tool.ruff.format]
quote-style = "double"
